force-app/main/default/objects/cpm__Reference_Generator_Run__c/cpm__Reference_Generator_Run__c.object-meta.xml
<CustomObject>
    <label>Payment Request Generator Run</label>
    <nameField>
        <label>Payment Request Generator Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Request Generator Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>