force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Campaign__c.field-meta.xml
<CustomField>
    <fullName>cpm__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Reference Generator Runs</relationshipLabel>
    <relationshipName>Reference_Generator_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>