force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Id_Field__c.field-meta.xml
<CustomField>
    <fullName>cpm__Id_Field__c</fullName>
    <label>Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>