force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Last_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Id__c</fullName>
    <label>Last Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>