force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Other_Input_Fields__c.field-meta.xml
<CustomField>
    <fullName>cpm__Other_Input_Fields__c</fullName>
    <label>Other Input Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>