force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Other_Output_Fields2__c.field-meta.xml
<CustomField>
    <fullName>cpm__Other_Output_Fields2__c</fullName>
    <label>Other Output Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>