force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Processor__c.field-meta.xml
<CustomField>
    <fullName>cpm__Processor__c</fullName>
    <label>Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>