force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Reference_Type__c</fullName>
    <label>Reference Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>