force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Report_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_Name__c</fullName>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>