force-app/main/default/objects/cpm__Reference_Generator_Run__c/fields/cpm__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Source_Type__c</fullName>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>