force-app/main/default/objects/cpm__Reference_Generator_Run__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <columns>NAME</columns>
    <columns>cpm__Status__c</columns>
    <columns>cpm__Reference_Type__c</columns>
    <columns>cpm__Generator_Type__c</columns>
    <columns>cpm__Source_Type__c</columns>
    <columns>cpm__Report_Name__c</columns>
    <columns>cpm__Report_Folder_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>